[gd_scene load_steps=3 format=3 uid="uid://ctpn4sdlu8mdk"]

[ext_resource type="StyleBox" uid="uid://bbqdqgeffrhn5" path="res://scenes/ui/card_pile_display_overlay.tres" id="1_laut6"]
[ext_resource type="Script" path="res://scenes/ui/card_pile_display.gd" id="1_q6mrl"]

[node name="CardPileDisplay" type="Panel"]
z_index = 4
offset_right = 640.0
offset_bottom = 360.0
theme_override_styles/panel = ExtResource("1_laut6")
script = ExtResource("1_q6mrl")

[node name="CardsContainer" type="FlowContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -280.0
offset_top = -98.0
offset_right = 280.0
offset_bottom = 117.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -213.0
offset_top = 29.0
offset_right = 214.0
offset_bottom = 85.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 32

[node name="CloseButton" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -52.0
offset_top = -62.0
offset_right = 52.0
offset_bottom = -22.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 16
text = "Close"
